--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "14.0.4",
+    "next-cloudinary": "^5.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
